--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1133,6 +1133,6 @@ span.more{
 .waterfallNew #fh5co-board .item{
 	border-radius:0px;
 }
-.ditails-tab-box img{
+/*.ditails-tab-box img{
 	width: 100%;
-}
+}*/
