--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1185,3 +1185,9 @@ span.more{
 .waterfallNew #fh5co-board .item{
 	border-radius:0px;
 }
+.ditails-tab-box img{
+	width: 0.551471rem;
+}
+.goods-detail-text .heart-detail{
+	font-size: 18px;
+}
