--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1186,7 +1186,7 @@ span.more{
 	border-radius:0px;
 }
 .ditails-tab-box img{
-	width: 0.551471rem;
+	width: 750px;
 }
 .goods-detail-text .heart-detail{
 	font-size: 18px;
