--- a/yimi/public/plugin/css/style.css
+++ b/yimi/public/plugin/css/style.css
@@ -59,6 +59,7 @@
 .fh5co-bg-section .fh5co-overlay { background: #000; opacity: .7; }
 .fh5co-bg-section .author { font-size: 20px; margin-bottom: 0; }
 #fh5co-main { padding-top: 5em; }
+#fh5co-main.waterfallNew { position: relative;top: -5em; }
 #fh5co-board .item {  margin: 10px 10px 27px 10px; background: #fff; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; border-radius: 4px; overflow: hidden; -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07); -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07); box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07); }
 #fh5co-board .item a { display: block; }
 #fh5co-board .item .fh5co-desc { padding: 20px; float: left; line-height: 24px; }
