--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1184,6 +1184,8 @@ span.more{
 
 .waterfallNew #fh5co-board .item{
 	border-radius:0px;
+	box-shadow:none;
+	-webkit-box-shadow:none;
 }
 .ditails-tab-box img{
 	width: 750px;
