--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -125,8 +125,8 @@ ul.nav{
 .litteBanner li{
 	margin-bottom: 32px;
 }
-.litteBanner img {
-    width: 12%;
+.litteBannerImg img {
+    width: 102%;
 }
 .myMsg{
 	position:relative;
