--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -121,6 +121,7 @@ ul.nav{
 	/*margin:30px auto;*/
 	margin-top: 30px;
     margin-bottom: 30px;
+    max-height: 4.854701rem;
 }
 .litteBanner li{
 	margin-bottom: 32px;
