--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -122,6 +122,7 @@ ul.nav{
 	margin-top: 30px;
     margin-bottom: 30px;
     max-height: 4.854701rem;
+    overflow: hidden;
 }
 .litteBanner li{
 	margin-bottom: 32px;
