--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -32,7 +32,7 @@
 	background: url("../img/searchW.png") no-repeat 0.196581rem 0.196581rem;
 }
 .topSearch .top-search{
-	width: 90%;
+	width: 93%;
     float: right;
 }
 .footer-nav{
@@ -195,13 +195,18 @@
 		float: left;
 	}
 	.index-title-ul li{
-		width: 66px;
+		width: 0.803419rem;
 		text-align: left;
 	}
 	.subTitles .more{
 		margin-right: 0px;
 		margin-top:0px;
 		float: right;
+	}
+	.subTitles .more img{
+		font-size: 10px;
+	    position: relative;
+	    left: -0.162393rem;
 	}
 	.overHide.mb40{
 		margin-bottom: 20px;
