--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -186,7 +186,7 @@
 		width: 49%;
 	}
 	.designer.buyer dl{
-		height: 12.125rem;
+		/*height: 12.125rem;*/
 	}
 	.designer.buyer dl{
 		margin-bottom: 9px;
