--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -254,7 +254,7 @@
 		margin-right: 0px;
 	    margin-top: 0px;
 	    float: right;
-	    width: 65px;
+	    width: 64px;
 	}
 	.topSearch .top-search input{
 		background-size: 0.196581rem 0.025641rem;
@@ -298,7 +298,7 @@
 	    left: auto;
 	}
 	.designer.buyer dl{
-		height: 1.051282rem;
+		height: 129px;
 	}
 	.footer-nav{
 		height: 0.401709rem;
