--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -248,13 +248,13 @@
 		padding-bottom: 0.401709rem
 	}
 	.index-title-ul li {
-	    width: 64px;
+	    width: 62px;
 	}
 	.subTitles .more{
 		margin-right: 0px;
 	    margin-top: 0px;
 	    float: right;
-	    width: 64px;
+	    width: 69px;
 	}
 	.topSearch .top-search input{
 		background-size: 0.196581rem 0.025641rem;
@@ -304,7 +304,8 @@
 		height: 0.401709rem;
 	}
 	.designer.buyer dl{
-		width: 50%;
+		
+    	height: 129px;
 		margin-bottom: 0.059829rem;
 	}
 	.designers-mobile{
@@ -315,9 +316,8 @@
 	}
 	.designer.buyer dl,
 	.designer.buyer dl dt,
-	.designer.buyer dl dd,
-	.designer.buyer dl dd img{
-		width: auto;
+	.designer.buyer dl dd{
+		width: 50%;
 	}
 	.designer.goods dl, .designer dl{
 		margin-bottom: 0px;
