--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -314,9 +314,7 @@
 	.designer{
 		margin-right: auto;
 	}
-	.designer.buyer dl,
-	.designer.buyer dl dt,
-	.designer.buyer dl dd{
+	.designerdl.col-xs-6{
 		width: 50%;
 	}
 	.designer.goods dl, .designer dl{
@@ -326,11 +324,14 @@
 		bottom: -2px;
 	}
 	.designer dl{
-		width: 50%;
+		/*width: o;*/
 		margin: 0px;
 	}
 	.designer.buyer dl{
 		margin-left:0px;
+	}
+	.designer.buyer dl, .designer.buyer dl dt, .designer.buyer dl dd{
+		width: 50%;
 	}
 }
 @media (max-width: 425px) {
