--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -113,6 +113,8 @@
 	}
 	.container-fluid,.container{
 		width: 100%;
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 	.sidebar{
 		padding-bottom: 10921px;
