--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -268,6 +268,10 @@
 	    right: -12%;
 	    left: auto;
 	}
+	.footer{
+		padding-bottom: 34px;
+    	clear: both;
+	}
 }
 
 @media (max-width: 500px) {
