--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -293,6 +293,18 @@
 		margin-top: -8px;
 		text-align: right;
 	}
+	.designer_list{
+		margin-top: 15px;
+	    margin-left: -15px;
+	    margin-right: -15px;
+	}
+	.designer-bg, .designer-img{
+		height: 100%;
+	}
+	.designer-img img{
+		width: 100%;
+		height: 100%;
+	}
 }
 
 @media (max-width: 500px) {
