--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -294,11 +294,9 @@
 		text-align: right;
 	}
 	.designer_list{
-		margin-top: 15px;
-	    margin-left: -15px;
-	    margin-right: -15px;
+	    margin:15px -15px;
 	}
-	.designer-bg, .designer-img{
+	.designer_list .designer-img{
 		height: 100%;
 	}
 	.designer-img img{
