--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -418,6 +418,13 @@
 		overflow: hidden;
 		width: 90%;
 	}
+	.main .container-fluid{
+		overflow: hidden;
+		width: 100%;
+	    margin: 0px;
+	    padding: 0px!important;
+	    padding-right: 7px!important;
+	}
 	.f-right{
 		margin-top: 15px;
 	}
