--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -418,7 +418,7 @@
 		overflow: hidden;
 		width: 90%;
 	}
-	.main .container-fluid{
+	.main .container-fluid,.main .container{
 		overflow: hidden;
 		width: 100%;
 	    margin: 0px;
