--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -4,9 +4,7 @@
     z-index: 100000000;
     display: none;
     width: 100%;
-    padding: 0px 15px;
-    padding-top: 0.230769rem;
-    height: 1.196581rem;
+    padding:0.08547rem;
     top:0px;
     background: #fff;
 }
