--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -31,7 +31,7 @@
 }
 .topSearch .top-search{
 	display: inline-block;
-	width: 8.21875rem;
+	width: 8.125rem;
 	margin-left: 0.3125rem;
 }
 .footer-nav{
@@ -78,11 +78,15 @@
 }
 /* 小屏幕（平板，大于等于 768px） */
 @media only screen and (max-width: 768px) {
-/*	.topSearch .top-search{
-		width: 89%;
-		float: right;
-		margin-right: 3%;
-	}*/
+	.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
+		padding-right: 0.3125rem!important;
+    	padding-left: 0.3125rem!important;
+	}
+	.container-fluid,.container{
+		width: 100%;
+		padding-right: 0.3125rem!important;
+    	padding-left: 0.3125rem!important;
+	}
 	body,.navbar-light{
 		padding-top: 1.196581rem; /*頂部搜索條高度 150px;*/
 	}
@@ -127,11 +131,7 @@
 	.index-content{
 		width: 100%;
 	}
-	.container-fluid,.container{
-		width: 100%;
-		padding-left: 15px!important;
-		padding-right: 15px!important;
-	}
+
 	.sidebar{
 		padding-bottom: 10921px;
 		margin-bottom: -10921px;
@@ -419,17 +419,6 @@
 	}
 	.item,#fh5co-board .item img{
 		width: 100%;
-	}
-	.container-fluid, .container{
-		overflow: hidden;
-		width: 90%;
-	}
-	.main .container-fluid,.main .container{
-		overflow: hidden;
-		width: 100%;
-	    margin: 0px;
-	    padding: 0px!important;
-	    padding-right: 0px!important;
 	}
 	.f-right{
 		margin-top: 15px;
