--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -431,8 +431,11 @@
 	.designer.buyer dl{
 		margin-left:0px;
 	}
-	.designer.buyer dl, .designer.buyer dl dt, .designer.buyer dl dd{
+	.designer.buyer dl{
 		width: 50%;
+	}
+	.designer.buyer dl dt, .designer.buyer dl dd{
+		width: 100%;
 	}
 	.item,#fh5co-board .item img{
 		width: 100%;
