--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -402,11 +402,10 @@
 	    left: auto;
 	}
 	.designer.buyer dl{
-		height: 129px;
+		height: auto;
 	}
 	.designer.buyer dl{
 		
-    	height: 129px;
 		margin-bottom: 0.059829rem;
 	}
 	.designers-mobile{
@@ -433,9 +432,14 @@
 	}
 	.designer.buyer dl{
 		width: 50%;
+		height: auto;
 	}
 	.designer.buyer dl dt, .designer.buyer dl dd{
 		width: 100%;
+	}
+	.designer.buyer dl dd img{
+		width: 100%;
+		height: auto;
 	}
 	.item,#fh5co-board .item img{
 		width: 100%;
